--- a/src/Components/City/City.css
+++ b/src/Components/City/City.css
@@ -1,5 +1,5 @@
 .City {
-    height: 17rem;
+    height: 18.5rem;
     width: 60%;
     max-width: 15rem;
     background-color: #FFFFFF;
@@ -65,4 +65,8 @@
 
 .CityBody .Weather h3{
     font-family: 'Raleway', sans-serif;
+}
+
+.CityBody .Weather img{
+    margin-right: 0.5rem;
 }
